# ZenithDoom

./: CMakeLists.txt  README.md
src/: main.c
src/zos/: zos_from_c.c  zos_from_c.h
